deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab-deployment
  labels:
    app: gitlab
spec:
  selector:
    matchLabels:
      app: gitlab
  template:
    metadata:
      labels:
        app: gitlab
    spec:
      containers:
      - name: gitlab
        image: gitlab/gitlab-ce
        ports:
        - containerPort: 80
          name: http
          #name: HTTP
        volumeMounts:
          - mountPath: /var/opt/gitlab
            name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: gitlab-dev-pvc
