service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-service
  labels:
    app: gitlab
spec:
  type: NodePort
  selector:
    app: gitlab
  ports:
  - port: 80
    targetPort: 80
    name: http
    protocol: TCP
