ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab-ce-domain
  namespace: gitlab
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - host: gitlab-service.default 
    http:
      paths:
      - path: /
        backend: 
          serviceName: gitlab-service
          servicePort: 80
